// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyHeader is rendered correctly to match the snapshot when linkTo is given 1`] = `
.emotion-0 {
  margin-bottom: 3rem;
  border-bottom: 0.25rem solid hsla(0, 0%, 75%);
}

.emotion-2 {
  margin-bottom: 0.3rem;
}

.emotion-4 {
  margin: 0 0 1rem;
}

.emotion-6 {
  margin: 0;
  color: hsla(0, 0%, 15%);
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-filter: drop-shadow(
        2px 2px 1px hsla(148, 72%, 85%)
      );
  filter: drop-shadow(
        2px 2px 1px hsla(148, 72%, 85%)
      );
}

.emotion-6:visited {
  color: hsla(0, 0%, 15%);
}

.emotion-8 {
  margin-top: 0.3rem;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "articleShareButtons": Object {
          "buttonWrapperDiv": Object {
            "shadow": "hsla(212, 72%, 75%)",
          },
        },
        "blogTitle": Object {
          "logoWrapperAnchor": Object {
            "textOnHover": "hsla(60, 72%, 65%)",
          },
        },
        "bodyHeader": Object {
          "titleAnchor": Object {
            "shadow": "hsla(148, 72%, 85%)",
          },
        },
        "categoryTag": Object {
          "anchor": Object {
            "bg": "hsla(212, 72%, 45%)",
            "bgOnHover": "hsla(212, 72%, 55%)",
            "shadow": "hsla(212, 72%, 75%)",
            "text": "white",
          },
        },
        "common": Object {
          "border": Object {
            "primary": "hsla(0, 0%, 50%)",
            "primaryLight": "hsla(0, 0%, 75%)",
          },
          "text": Object {
            "accent": "hsla(148, 72%, 45%)",
            "primary": "hsla(0, 0%, 15%)",
            "primaryLight": "hsla(0, 0%, 40%)",
            "secondary": "hsla(212, 72%, 35%)",
          },
        },
        "dateTime": Object {
          "isoDateTime": Object {
            "text": "hsla(212, 72%, 35%)",
          },
        },
        "global": Object {
          "body": Object {
            "bg": "hsla(60, 72%, 55%)",
          },
          "table": Object {
            "tr": Object {
              "bg2n": "hsla(148, 72%, 95%)",
            },
          },
        },
        "markdownRenderer": Object {
          "convertedMdBody": Object {
            "blockquote": Object {
              "border": "hsla(212, 72%, 95%)",
            },
          },
        },
        "siteHeader": Object {
          "header": Object {
            "bg": "hsla(148, 72%, 25%)",
            "shadow": "hsla(148, 72%, 15%)",
          },
          "innerWrapperFlexContainerDiv": Object {
            "shadow": "hsla(148, 72%, 15%)",
          },
        },
        "socialLinkWithIcon": Object {
          "socialLinkAnchor": Object {
            "textOnHover": "hsla(60, 72%, 55%)",
          },
        },
      },
    }
  }
>
  <BodyHeader
    afterTitle={
      <div>
        AFTER
      </div>
    }
    beforeTitle={
      <div>
        BEFORE
      </div>
    }
    linkTo="/"
    title="Test Article Title 1"
  >
    <WrapperHeader>
      <header
        className="emotion-0 emotion-1"
      >
        <BeforeTitleDiv>
          <div
            className="emotion-2 emotion-3"
          >
            <div>
              BEFORE
            </div>
          </div>
        </BeforeTitleDiv>
        <TitleH1>
          <h1
            className="emotion-4 emotion-5"
          >
            <Link
              href="/"
              passHref={true}
            >
              <TitleAnchor
                href="/"
                onClick={[Function]}
                onMouseEnter={[Function]}
              >
                <a
                  className="emotion-6 emotion-7"
                  href="/"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                >
                  Test Article Title 1
                </a>
              </TitleAnchor>
            </Link>
          </h1>
        </TitleH1>
        <AfterTitleDiv>
          <div
            className="emotion-8 emotion-9"
          >
            <div>
              AFTER
            </div>
          </div>
        </AfterTitleDiv>
      </header>
    </WrapperHeader>
  </BodyHeader>
</ThemeProvider>
`;

exports[`BodyHeader is rendered correctly to match the snapshot when linkTo is not given 1`] = `
.emotion-0 {
  margin-bottom: 3rem;
  border-bottom: 0.25rem solid hsla(0, 0%, 75%);
}

.emotion-2 {
  margin-bottom: 0.3rem;
}

.emotion-4 {
  margin: 0 0 1rem;
}

.emotion-6 {
  margin-top: 0.3rem;
}

<ThemeProvider
  theme={
    Object {
      "color": Object {
        "articleShareButtons": Object {
          "buttonWrapperDiv": Object {
            "shadow": "hsla(212, 72%, 75%)",
          },
        },
        "blogTitle": Object {
          "logoWrapperAnchor": Object {
            "textOnHover": "hsla(60, 72%, 65%)",
          },
        },
        "bodyHeader": Object {
          "titleAnchor": Object {
            "shadow": "hsla(148, 72%, 85%)",
          },
        },
        "categoryTag": Object {
          "anchor": Object {
            "bg": "hsla(212, 72%, 45%)",
            "bgOnHover": "hsla(212, 72%, 55%)",
            "shadow": "hsla(212, 72%, 75%)",
            "text": "white",
          },
        },
        "common": Object {
          "border": Object {
            "primary": "hsla(0, 0%, 50%)",
            "primaryLight": "hsla(0, 0%, 75%)",
          },
          "text": Object {
            "accent": "hsla(148, 72%, 45%)",
            "primary": "hsla(0, 0%, 15%)",
            "primaryLight": "hsla(0, 0%, 40%)",
            "secondary": "hsla(212, 72%, 35%)",
          },
        },
        "dateTime": Object {
          "isoDateTime": Object {
            "text": "hsla(212, 72%, 35%)",
          },
        },
        "global": Object {
          "body": Object {
            "bg": "hsla(60, 72%, 55%)",
          },
          "table": Object {
            "tr": Object {
              "bg2n": "hsla(148, 72%, 95%)",
            },
          },
        },
        "markdownRenderer": Object {
          "convertedMdBody": Object {
            "blockquote": Object {
              "border": "hsla(212, 72%, 95%)",
            },
          },
        },
        "siteHeader": Object {
          "header": Object {
            "bg": "hsla(148, 72%, 25%)",
            "shadow": "hsla(148, 72%, 15%)",
          },
          "innerWrapperFlexContainerDiv": Object {
            "shadow": "hsla(148, 72%, 15%)",
          },
        },
        "socialLinkWithIcon": Object {
          "socialLinkAnchor": Object {
            "textOnHover": "hsla(60, 72%, 55%)",
          },
        },
      },
    }
  }
>
  <BodyHeader
    afterTitle={
      <div>
        AFTER
      </div>
    }
    beforeTitle={
      <div>
        BEFORE
      </div>
    }
    title="Test Article Title 1"
  >
    <WrapperHeader>
      <header
        className="emotion-0 emotion-1"
      >
        <BeforeTitleDiv>
          <div
            className="emotion-2 emotion-3"
          >
            <div>
              BEFORE
            </div>
          </div>
        </BeforeTitleDiv>
        <TitleH1>
          <h1
            className="emotion-4 emotion-5"
          >
            Test Article Title 1
          </h1>
        </TitleH1>
        <AfterTitleDiv>
          <div
            className="emotion-6 emotion-7"
          >
            <div>
              AFTER
            </div>
          </div>
        </AfterTitleDiv>
      </header>
    </WrapperHeader>
  </BodyHeader>
</ThemeProvider>
`;
